# todo-bot

./: .gitignore  Cargo.toml  commands.yaml
command/: Cargo.toml
command-derive/: Cargo.toml
command-derive/src/: lib.rs
command/src/: lib.rs
src/: commands.rs  main.rs  parser.rs  state.rs
