[package]
name = "todo-bot"
version = "0.1.0"
edition = "2021"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
futures-util = "0.3.19"
lazy_static = "1.4.0"
log = "0.4.14"
serde_json = "1.0.78"
thiserror = "1.0.30"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing-subscriber = "0.3.7"
twilight-gateway = "0.9.0"
twilight-http = "0.9.0"
twilight-model = "0.9.0"
twilight-util = { version = "0.9.0", features = ["builder"] }

command = { path = "command" }
command-derive = { path = "command-derive" }
